--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
