--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,27 @@
 Package: shinyChakraSlider
-Title: What the Package Does (One Line, Title Case)
+Title: Combined Slider and Numeric Input for 'Shiny'
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
+Authors@R: c(
+    person(given = "Stéphane",
+           family = "Laurent",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: What license it uses
+           email = "laurent_step@outlook.fr"),
+    person(given = "Segun",
+           family = "Adebayo",
+           role = c("ctb", "cph"),
+           email = "sage@adebayosegun.com",
+           comment = "'chakra-ui' library (https://github.com/chakra-ui/chakra-ui)"),
+    person(given = "Goran",
+           family = "Gajic",
+           role = c("ctb", "cph"),
+           comment = "'react-icons' library (https://github.com/react-icons/react-icons)"),
+    person(given = "Peter",
+           family = "Newnham",
+           role = c("ctb", "cph"),
+           comment = "'react-html-parser' library (https://github.com/wrakky/react-html-parser)")
+    )
+Description: Provides a combined slider and numeric input for usage in a Shiny UI.
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
