--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,11 +21,14 @@ Authors@R: c(
            comment = "'react-html-parser' library (https://github.com/wrakky/react-html-parser)")
     )
 Description: Provides a combined slider and numeric input for usage in a Shiny UI.
+URL: https://github.com/stla/shinyChakraSlider
+BugReports: https://github.com/stla/shinyChakraSlider/issues
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
     htmltools,
     shiny,
-    reactR
-RoxygenNote: 7.0.2
+    reactR,
+    grDevices
+RoxygenNote: 7.1.1
