--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ importFrom(htmltools,htmlDependency)
 importFrom(htmltools,tags)
 importFrom(reactR,createReactShinyInput)
 importFrom(shiny,validateCssUnit)
+importFrom(utils,packageVersion)
