--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ importFrom(htmltools,htmlDependency)
 importFrom(htmltools,tags)
 importFrom(reactR,createReactShinyInput)
 importFrom(shiny,validateCssUnit)
+importFrom(utils,URLencode)
 importFrom(utils,packageVersion)
